design(css): Fix menu button on small devices

--- a/assets/css/lanyon.css
+++ b/assets/css/lanyon.css
@@ -214,21 +214,23 @@ a.sidebar-nav-item:focus {
 /* Style the `label` that we use to target the `.sidebar-checkbox` */
 .sidebar-toggle {
   position: absolute;
-  top:  .8rem;
+  top:  1rem;
   left: 1rem;
   display: flex;
   align-items: center;
-  padding: .25rem .75rem;
+  padding: .25rem .5rem;
   color: #505050;
   background-color: #fff;
   border-radius: .25rem;
   cursor: pointer;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .sidebar-toggle::before {
   display: inline-block;
-  width: 32px;
-  height: 32px;
+  width: 1.5rem;
+  height: 1.5rem;
   content: "";
   background: url("data:image/svg+xml,%3Csvg viewBox='0 0 16 16' fill='%23555' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' d='M2.5 11.5A.5.5 0 013 11h10a.5.5 0 010 1H3a.5.5 0 01-.5-.5zm0-4A.5.5 0 013 7h10a.5.5 0 010 1H3a.5.5 0 01-.5-.5zm0-4A.5.5 0 013 3h10a.5.5 0 010 1H3a.5.5 0 01-.5-.5z' clip-rule='evenodd'/%3E%3C/svg%3E") no-repeat;
 }
